<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">5252WORLDSMS</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="signin">Sign in to get started</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="proceed">proceed</string>
    <string name="upload">File</string>
    <string name="about">About</string>
    <string name="to">To</string>
    <string name="register">Register</string>
    <string name="contact">Contact us</string>
    <string name="send">Send</string>
    <string name="phonebook">Phonebook</string>
    <string name="recharge">Recharge</string>
    <string name="balance">Check Balance</string>
    <string name="sender">Sender</string>
    <string name="number">Type no:</string>
    <string name="exit">Exit</string>
    <string name="message">Message</string>
    <string name="choose">Choose contact group</string>
    <string name="theme">...imagination equals possibilities</string>
    

</resources>
