<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bac5252"
  	
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#666666"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="@drawable/butt"
            android:text="Menu" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="#d99f00"
            android:layout_marginLeft="0dp"
            android:textStyle="bold"
            
            android:layout_marginTop="5dp"
            android:text="MESSAGE" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            
            android:background="@drawable/butt"
            android:text="Settings" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/totextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:textColor="#d99f00"
            android:text="@string/to" />

        <EditText
            android:id="@+id/toeditText"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/editbox"
            android:inputType="phone" >

            <requestFocus />
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/phonebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:text="@string/phonebook"
            android:background="@drawable/butt"
            android:onClick="phonebook" />

        <Button
            android:id="@+id/filebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:background="@drawable/butt"
             android:layout_marginLeft="20dp"
            android:text="@string/upload"
            android:onClick="file" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="#d99f00"
            android:layout_marginLeft="80dp"
            android:text="Sender" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="152dp"
            android:layout_height="wrap_content"
            android:background="@drawable/editbox"
            android:ems="10" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/messagetextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:textColor="#d99f00"
            android:text="@string/message"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/messageeditText"
            android:layout_width="277dp"
            android:layout_height="163dp"
            android:layout_marginLeft="40dp"
            android:background="@drawable/editbox2"
            android:ems="10" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/sendbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:text="@string/send"
            android:background="@drawable/butt"
            android:onClick="send" />

        <Button
            android:id="@+id/balancebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="@drawable/butt"
            android:onClick="balance"
            android:text="balance" />

    </LinearLayout>

</LinearLayout>
